Updated name, license

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>LaTeX Table Generator (Custom Clines)</title>
+  <title>LaTeX Table Generator by João Tampellini</title>
   <style>
     body { font-family: sans-serif; padding: 20px; background: #fcfcfc; }
     h1 { margin-bottom: 10px; }
